# qtquick-carousel

./: CMakeLists.txt  Carousel.h  LICENSE  README.md  carousel.cpp  qmldir
example/: example.cpp  example.qml
